# SmartAgent

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
agent/: agent.py
ingestion/: chunker.py  loader.py  main.py
middleware/: dynamic_prompt.py  language_mw.py
model/: load_model.py
store/: __init__.py  store.py
tools/arabic/: arabic_tool.py
tools/eng/: eng_tools.py
