[project]
name = "agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-community>=0.4.1",
    "langchain-pymupdf4llm>=0.5.0",
    "langgraph-checkpoint-postgres>=3.0.4",
    "psycopg[binary,pool]>=3.3.3",
    "sentence-transformers>=5.2.3",
    "langchain-huggingface>=0.1.2",
    "langchain-text-splitters>=1.1.0",
    "langchain>=1.2.10",
    "streamlit>=1.54.0",
    "rich>=14.3.2",
    "langdetect>=1.0.9",
    "langchain-groq>=1.1.2",
]
